<resources>
    <string name="app_name">Colour Tester</string>
    <string name="_1">#1</string>
    <string name="colour_name">colour_name</string>
    <string name="percent_placeholder">xx%</string>
    <string name="_2">#2</string>
    <string name="_3">#3</string>
    <string name="settings">Settings</string>
    <string name="view_all_results">View all results</string>
    <string name="basic_mode">Basic mode:</string>
</resources>
