<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="4"
    tools:context=".ResultsActivity">

    <ImageView
        android:id="@+id/edit_imgview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:layout_row="0"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/_1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_name_txt_1"
        android:layout_height="10dp"
        android:layout_width="10dp"
        android:layout_gravity="fill"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/colour_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_percentage_txt_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/percent_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/colour_img_1"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="3"
        android:layout_row="1"
        />



    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/_2"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_name_txt_2"
        android:layout_height="10dp"
        android:layout_width="10dp"
        android:layout_gravity="fill"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/colour_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_percentage_txt_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/percent_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/colour_img_2"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="3"
        android:layout_row="2"
        />



    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/_3"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_name_txt_3"
        android:layout_height="10dp"
        android:layout_width="10dp"
        android:layout_gravity="fill"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/colour_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/colour_percentage_txt_3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/percent_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/colour_img_3"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginLeft="@dimen/results_margin"
        android:layout_column="3"
        android:layout_row="3"
        />

    <Button
        android:id="@+id/btnExpandResults"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_all_results"
        android:onClick="viewAllResults_onClick"/>

</GridLayout>
